error
main.cpp: In function ‘int main(int, char**)’:
main.cpp:442:5: error: ‘txt_error’ was not declared in this scope
     txt_error<<error_epoca<<endl;
     ^~~~~~~~~
main.cpp:444:5: error: ‘txt_out’ was not declared in this scope
     txt_out.close();
     ^~~~~~~
main.cpp:450:4: error: ‘txt_error’ was not declared in this scope
    txt_error.close();
    ^~~~~~~~~
